--- a/index.html
+++ b/index.html
@@ -4,7 +4,20 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/ico" href="/icon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Tic tac toe</title>
+    <meta name="description" content="Teste técnico: Tic Tac Toe (Jogo da Velha) em React." />
+    <!-- Open Graph / Social -->
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="Tic tac toe" />
+    <meta property="og:description" content="Teste técnico: Tic Tac Toe (Jogo da Velha) em React." />
+    <meta property="og:image" content="/thumbnail.png" />
+    <meta property="og:locale" content="pt_BR" />
+    <!-- Twitter -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta name="twitter:title" content="Tic tac toe" />
+    <meta name="twitter:description" content="Teste técnico: Tic Tac Toe (Jogo da Velha) em React." />
+    <meta name="twitter:image" content="/thumbnail.png" />
+    <link rel="image_src" href="/thumbnail.png" />
+    <title>Tic tac toe</title> 
   </head>
   <body>
     <div id="root"></div>
